--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -31,7 +31,7 @@
 @using SPTarkov.Launcher.Components.Profiles
 @using SPTarkov.Launcher.Components.Profiles.Profile
 @using SPTarkov.Launcher.Components.Settings
-@using SPTarkov.Launcher.Components.ForgeManager
+@using SPTarkov.Launcher.Components.Forge
 @using SPTarkov.Launcher.Components.Info
 
 @using System.Collections.Specialized
