--- a/project/SPTarkov.Launcher/Components/Forge/ModCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Forge/ModCardComponent.razor
@@ -50,7 +50,7 @@
                     <CardHeaderActions>
                         @if (ForgeMod.GetModFeatured())
                         {
-                            <MudTooltip Placement="Placement.Left" Arrow="true" Text="Featured">
+                            <MudTooltip Placement="Placement.Left" Arrow="false" Text="Featured">
                                 <MudIconButton Icon="@Icons.Material.Filled.Favorite"/>
                             </MudTooltip>
                         }
