--- a/project/SPTarkov.Launcher/Components/Home/ServerCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Home/ServerCardComponent.razor
@@ -13,32 +13,32 @@
         <MudText Typo="Typo.h6">@Server.IpAddress</MudText>
         <MudContainer Class="d-flex pa-0 flex-row">
 
-            <MudTooltip Color="Color.Dark" Arrow="true" Placement="Placement.Right" Text="@(IsConnectedServer ? LocaleHelper.Get("server_card_connected") : LocaleHelper.Get("server_card_disconnected"))">
+            <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Right" Text="@(IsConnectedServer ? LocaleHelper.Get("server_card_connected") : LocaleHelper.Get("server_card_disconnected"))">
                 <MudIconButton Icon="@Icons.Material.Filled.Circle" Color="@(IsConnectedServer ? Color.Success : Color.Error)" Size="Size.Small"/>
             </MudTooltip>
 
             <MudSpacer/>
 
-            <MudTooltip Color="Color.Dark" Arrow="true" Placement="Placement.Left" Text="@(!IsConnectedServer ? LocaleHelper.Get("server_card_login") : LocaleHelper.Get("server_card_logout"))">
+            <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Left" Text="@(!IsConnectedServer ? LocaleHelper.Get("server_card_login") : LocaleHelper.Get("server_card_logout"))">
                 <MudIconButton Class="mr-1" Color="Color.Success" Icon="@(!IsConnectedServer ? Icons.Material.Filled.Login : Icons.Material.Filled.Logout)" Size="Size.Small" OnClick="RunLoginTask"/>
             </MudTooltip>
 
             @if (!Server.Locked)
             {
-                <MudTooltip Color="Color.Dark" Arrow="true" Placement="Placement.Left" Text="@(LocaleHelper.Get("server_card_edit"))">
+                <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Left" Text="@(LocaleHelper.Get("server_card_edit"))">
                     <MudIconButton Icon="@Icons.Material.Filled.Build" Color="Color.Default" Size="Size.Small" OnClick="RunEditTask"/>
                 </MudTooltip>
             }
 
             @if (Server.Locked)
             {
-                <MudTooltip Color="Color.Dark" Arrow="true" Placement="Placement.Left" Text="@(LocaleHelper.Get("server_card_protect"))">
+                <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Left" Text="@(LocaleHelper.Get("server_card_protect"))">
                     <MudIconButton Color="Color.Tertiary" Icon="@Icons.Material.Filled.Lock" Size="Size.Small"/>
                 </MudTooltip>
             }
             else
             {
-                <MudTooltip Color="Color.Dark" Arrow="true" Placement="Placement.Left" Text="@(LocaleHelper.Get("server_card_delete"))">
+                <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Left" Text="@(LocaleHelper.Get("server_card_delete"))">
                     <MudIconButton Color="Color.Error" Icon="@Icons.Material.Filled.Delete" Size="Size.Small" OnClick="RunDeleteTask"/>
                 </MudTooltip>
             }
