add ability to copy text, add ability to hide side image

--- a/project/SPTarkov.Launcher/Pages/Profiles.razor
+++ b/project/SPTarkov.Launcher/Pages/Profiles.razor
@@ -18,7 +18,7 @@
     <MudGrid>
         @foreach (var profile in ProfilesList)
         {
-            <ProfileCardComponent MiniProfile="@profile" @bind-ProfileList="ProfilesList"/>
+            <ProfileCardComponent MiniProfile="@profile" @bind-ProfileList="ProfilesList" HideSideImage="true"/>
         }
 
         @switch (ProfilesList.Count)
