--- a/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
@@ -4,11 +4,12 @@
 @inject NavigationManager NavigationManager
 @inject ILogger<ProfileCardComponent> Logger
 @inject LocaleHelper LocaleHelper
+@inject WindowsClipboard WindowsClipboard
 
 <MudItem sm="4">
     <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 mud-background-gray border-2 border-solid mud-border-lines-default card-container info-card-height">
         <div class="card-overflow">
-            @if (!SideIsUnknown)
+            @if (!SideIsUnknown && !HideSideImage)
             {
                 <MudImage Src=@(ImageName()) Elevation="0" Class=@(ImageClassNames())/>
             }
@@ -24,14 +25,20 @@
         <MudDivider DividerType="DividerType.Middle"/>
         <MudText Class="mb-n3 no-pointers no-select" Typo="Typo.caption">@(LocaleHelper.Get("profile_card_id")):</MudText>
         <MudText Typo="Typo.body1">@MiniProfile.ProfileId</MudText>
+
         @if (!HideButtons)
         {
             <MudContainer Class="justify-end d-flex pa-0">
 
+                <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Right" Text="COPY PROFILE ID">
+                    <MudIconButton Disabled="!IsWindows" Class="mr-1" Color="Color.Info" Icon="@Icons.Material.Filled.FileCopy" Size="Size.Small" OnClick="CopyProfileId"/>
+                </MudTooltip>
+                <MudSpacer/>
+
                 @if (!MiniProfile.InvalidOrUnloadableProfile)
                 {
                     <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Left" Text="@(LoggedIn ? LocaleHelper.Get("profile_card_logout") : LocaleHelper.Get("profile_card_login"))">
-                        <MudIconButton Class="mr-1" Color="Color.Success" Icon="@(!LoggedIn ? Icons.Material.Filled.Login : Icons.Material.Filled.Logout)" Size="Size.Small" @onclick="RunLoginTask"/>
+                        <MudIconButton Class="mr-1" Color="Color.Success" Icon="@(!LoggedIn ? Icons.Material.Filled.Login : Icons.Material.Filled.Logout)" Size="Size.Small" OnClick="RunLoginTask"/>
                     </MudTooltip>
                 }
                 else
@@ -42,7 +49,7 @@
                 }
 
                 <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Left" Text="@(LocaleHelper.Get("profile_card_delete"))">
-                    <MudIconButton Color="Color.Error" Icon="@Icons.Material.Filled.Delete" Size="Size.Small" @onclick="RunDeleteTask"/>
+                    <MudIconButton Color="Color.Error" Icon="@Icons.Material.Filled.Delete" Size="Size.Small" OnClick="RunDeleteTask"/>
                 </MudTooltip>
 
             </MudContainer>
@@ -55,6 +62,9 @@
     public bool HideButtons { get; set; }
 
     [Parameter]
+    public bool HideSideImage { get; set; }
+
+    [Parameter]
     public MiniProfile MiniProfile { get; set; }
 
     [Parameter]
@@ -62,6 +72,8 @@
 
     [Parameter]
     public EventCallback<List<MiniProfile>> ProfileListChanged { get; set; }
+
+    private bool IsWindows => OperatingSystem.IsWindows();
 
     private bool SideIsUnknown { get; set; }
     private bool LoggedIn { get; set; }
@@ -155,4 +167,14 @@
         }
     }
 
+    private async Task CopyProfileId()
+    {
+        if (!IsWindows)
+        {
+            return;
+        }
+
+        WindowsClipboard.CopyText(MiniProfile.ProfileId);
+        Logger.LogInformation("Copied profile id to clipboard: {id}", MiniProfile.ProfileId);
+    }
 }
