--- a/project/SPTarkov.Launcher/Components/Forge/DetailedModComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Forge/DetailedModComponent.razor
@@ -3,6 +3,7 @@
 @inject IDialogService DialogService
 @inject ConfigHelper ConfigHelper
 @inject ILogger<DetailedModComponent> Logger
+@inject NavigationManager NavigationManager
 
 <MudItem sm="12">
     @if (IsSkeleton)
@@ -23,6 +24,9 @@
     else
     {
         <MudGrid>
+            <MudItem sm="12">
+                <MudButton StartIcon="@Icons.Material.Filled.ArrowBack" IconColor="Color.Error" Color="Color.Dark" Size="Size.Medium" Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" OnClick="ReturnToForge">Back</MudButton>
+            </MudItem>
             <MudItem sm="8">
                 <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4">
                     <MudCardHeader>
@@ -45,26 +49,6 @@
                         <MudText>@ForgeMod.Teaser</MudText>
                     </MudCardContent>
                 </MudCard>
-                @* <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4"> *@
-                @*     <MudCardHeader> *@
-                @*         <MudGrid> *@
-                @*             <MudItem sm="8"> *@
-                @*                 <MudText Typo="Typo.h6" Class="no-pointers no-select">Version @(latestVersion.Version)</MudText> *@
-                @*                 @if (!string.IsNullOrEmpty(latestVersion.VirusTotalLink)) *@
-                @*                 { *@
-                @*                     <MudLink Color="Color.Default" Underline="Underline.Always" Href="@(latestVersion.VirusTotalLink)">Virus Total Results</MudLink> *@
-                @*                 } *@
-                @*             </MudItem> *@
-                @*             <MudItem sm="4" Class="d-flex flex-column align-end"> *@
-                @*                 <MudText Typo="Typo.body1" Class="no-pointers no-select">Created @(latestVersion.GetCreatedDateFormatted())</MudText> *@
-                @*                 <MudText Typo="Typo.body1" Class="no-pointers no-select">Published @(latestVersion.GetPublishedDateFormatted())</MudText> *@
-                @*             </MudItem> *@
-                @*             <MudItem sm="12" Class="user-markdown"> *@
-                @*                 @((MarkupString)ForgeModVersion.Description) *@
-                @*             </MudItem> *@
-                @*         </MudGrid> *@
-                @*     </MudCardHeader> *@
-                @* </MudCard> *@
                 <MudCard Class="mud-background-gray border-2 border-solid mud-border-lines-default">
                     <MudCardContent Class="user-markdown">@((MarkupString)ForgeMod.Description)</MudCardContent>
                 </MudCard>
@@ -111,7 +95,10 @@
                     </MudCardContent>
                 </MudCard>
                 <MudItem sm="12" Class="mt-4">
-                    <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.Download" IconColor="Color.Success" Variant="Variant.Filled" Style="width: 100% " Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" OnClick="StartDownloadModTask">@($"Download Latest ({LatestVersion.Version})")</MudButton>
+                    <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.Download" IconColor="Color.Success" Variant="Variant.Filled" Style="width: 100% "
+                               Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" OnClick="StartDownloadModTask">
+                        @($"Download Latest ({LatestVersion.Version})")
+                    </MudButton>
                 </MudItem>
             </MudItem>
         </MudGrid>
@@ -119,9 +106,12 @@
 </MudItem>
 
 @code {
-    [Parameter] public bool IsSkeleton { get; set; }
-    [Parameter] public ForgeBase ForgeMod { get; set; }
-    [Parameter] public ForgeModVersion ForgeModVersion { get; set; }
+    [Parameter]
+    public bool IsSkeleton { get; set; }
+    [Parameter]
+    public ForgeBase ForgeMod { get; set; }
+    [Parameter]
+    public ForgeModVersion ForgeModVersion { get; set; }
 
     private ForgeModVersion LatestVersion => ForgeMod.Versions?.FirstOrDefault();
 
@@ -140,7 +130,6 @@
         var option = new DialogOptions
         {
             Position = ConfigHelper.DialogOptions.Position,
-            MaxWidth = MaxWidth.Large,
             BackdropClick = ConfigHelper.DialogOptions.BackdropClick,
             CloseOnEscapeKey = ConfigHelper.DialogOptions.CloseOnEscapeKey,
             NoHeader = ConfigHelper.DialogOptions.NoHeader,
@@ -175,4 +164,8 @@
         Logger.LogInformation("Download cancelled");
     }
 
+    private void ReturnToForge()
+    {
+        NavigationManager.NavigateTo("/Forge");
+    }
 }
